feat(API): add a rebase branches
